# tennis-data-pipeline

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: auth.sh  devcontainer.json  install.sh
airflow/: .env.example  Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: tennis_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/analyses/: age_trends_example.sql  match_outcomes_example.sql
dbt/models/marts/: fct_match_outcomes.sql  fct_player_age_trends.sql  schema.yml
dbt/models/staging/: schema.yml  stg_atp_matches.sql  stg_wta_matches.sql
dbt/tests/: assert_best_of_3_no_4th_set.sql  assert_completed_matches_have_sets_played.sql  assert_sets_played_not_exceed_best_of.sql  assert_tourney_id_year_matches_date.sql  assert_went_to_set_consistency.sql  assert_winner_loser_different.sql
pipeline/: download.py  load_bigquery.py  upload_gcs.py
schemas/: matches.json
terraform/: main.tf  variables.tf  variables.tfvars.example
