[project]
name = "tennis-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.1.8",
]
